--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <meta property="og:title" content="Nino Hägglund | .NET Developer & Cloud Architect" />
     <meta property="og:description" content="Senior .NET Developer specializing in ASP.NET Core, C#, Azure, and cloud-native architecture." />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://net-portfolio-ninohaegglund.netlify.app/assets/og-image.png" />
 
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ninohagglund" />
+    <meta name="twitter:image" content="https://net-portfolio-ninohaegglund.netlify.app/assets/og-image.png" />
   </head>
 
   <body>
